# natt

./: .gitignore  CMakeLists.txt  Makefile  README.md  build-ubuntu.sh  build-windows.bat  build-windows.ps1  conanfile.txt  config.yaml  init.sql
.github/workflows/: .yamllint  build-windows-gui.yml
cmake/: dependencies.cmake
cmd/client/: main.cpp
cmd/gui/: index.html  main.cpp
cmd/relay_server/: main.cpp
cmd/server/: main.cpp
cmd/stun_server/: main.cpp
cmd/test_client/: main.cpp
docs/superpowers/plans/: 2026-06-11-github-action-windows-gui.md  2026-06-11-qt-gui-migration.md
docs/superpowers/specs/: 2026-06-04-natmesh-gui-design.md  2026-06-11-github-action-windows-gui-design.md  2026-06-11-natmesh-gui-qt-migration.md
include/natcore/: CoreClient.h
include/openssl/: opensslconf.h
src/auth/: jwt.cpp  jwt.h
src/client/: TestClient.cpp  TestClient.h  UdpPuncher.cpp  UdpPuncher.h  WsClient.cpp  WsClient.h
src/config/: config.cpp  config.h
src/core/: CoreClient.cpp
src/crypto/: CertGenerator.cpp  CertGenerator.h  NoiseProtocol.cpp  NoiseProtocol.h
src/http/: http_server.cpp  http_server.h
src/ipam/: IpAllocator.cpp  IpAllocator.h
src/model/: device.h  network.h  user.h
src/nat/: heartbeat_monitor.cpp  heartbeat_monitor.h  message_dispatcher.cpp  message_dispatcher.h  node_registry.cpp  node_registry.h  session_manager.cpp  session_manager.h
src/relay/: RelayRegistry.cpp  RelayRegistry.h  RelayServer.cpp  RelayServer.h
src/repository/: database.cpp  database.h  device_repo.cpp  device_repo.h  network_repo.cpp  network_repo.h  user_repo.cpp  user_repo.h
src/service/: device_service.cpp  device_service.h  network_service.cpp  network_service.h  peer_manager.cpp  peer_manager.h  user_service.cpp  user_service.h
src/stun/: StunServer.cpp  StunServer.h
src/tun/: TunInterface.h  TunLinux.cpp  TunWindows.cpp
src/util/: uuid.cpp  uuid.h
src/ws/: ws_session.cpp  ws_session.h  wss_session.cpp  wss_session.h
